test/org/midica/testfiles/failing/chord-inside-meta.midica
INCLUDE_FILE inc/instruments.midica

META
	CHORD testchord c d e
	0 c /4
END
